[package]
name = "uniswap-v4-sdk"
version = "0.4.0"
edition = "2021"
rust-version = "1.83"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "Uniswap V4 SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-v4-sdk-rs"
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
keywords = ["uniswap-v4", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[dependencies]
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }
derive_more = { version = "2", default-features = false, features = ["deref", "deref_mut"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
thiserror = { version = "2", default-features = false }
uniswap-sdk-core = "4.0.0"
uniswap-v3-sdk = "4.0.0"

[dev-dependencies]
alloy = { version = "0.12", default-features = false, features = ["signer-local"] }
num-integer = { version = "0.1", default-features = false }
once_cell = "1.20"

[features]
default = []
std = [
    "thiserror/std",
    "uniswap-sdk-core/std",
    "uniswap-v3-sdk/std"
]
