[package]
name = "uniswap-v4-sdk"
version = "0.8.0"
edition = "2021"
rust-version = "1.83"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "Uniswap V4 SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-v4-sdk-rs"
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
keywords = ["uniswap-v4", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloy = { version = "1.0.1", optional = true, default-features = false, features = ["contract"] }
alloy-primitives = { version = "1.0", default-features = false }
alloy-sol-types = { version = "1.0", default-features = false }
derive_more = { version = "2", default-features = false, features = ["deref", "deref_mut", "from"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
thiserror = { version = "2", default-features = false }
uniswap-sdk-core = "5.1.0"
uniswap-v3-sdk = "5.0.0"

[dev-dependencies]
alloy = { version = "1.0.1", default-features = false, features = ["reqwest", "signer-local"] }
dotenv = "0.15.0"
num-integer = { version = "0.1", default-features = false }
once_cell = "1.21"
tokio = { version = "1.45", features = ["full"] }

[features]
default = []
std = [
    "alloy-sol-types/std",
    "alloy?/std",
    "thiserror/std",
    "uniswap-sdk-core/std",
    "uniswap-v3-sdk/std"
]
extensions = [
    "alloy",
    "uniswap-v3-sdk/extensions"
]
